# WebPanel

./: .buildinfo  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  app.db.html  app.repository.interface.html  app.schemas.html  app.views.html  app.views.v1.html  docker-compose-dev-logs.yaml  docker-compose.yaml  genindex.html  index.html  modules.html  objects.inv  pyproject.toml  search.html  searchindex.js
.doctrees/: app.controllers.doctree  app.repository.interface.doctree  app.utils.doctree  app.views.v1.doctree
.github/workflows/: cd-pipeline.yaml  ci-pipeline.yml  pipeline-ci-cd.yml  pipeline-ci.yml
_sources/: app.core.di.rst.txt  app.core.rst.txt  app.views.v1.main.rst.txt  app.views.v1.rst.txt
config/: app_config.toml  logging_config_dev.yaml  logging_config_prod.yaml
config/db_config/: config.yaml  queries_postgres.yaml  queries_sqlite.yaml
config/logger_filters/: filters.py
docker/: .env.docker  Dockerfile  Makefile
docker/shell/: start.sh
docs/: app.rst  conf.py  index.rst
docs/_build/html/: .buildinfo.bak  app.controllers.html  app.core.di.html  app.core.html  app.db.html  app.html  app.repository.html  app.repository.interface.html  app.schemas.html  app.utils.html  app.views.html  (+9 more)
k3s/: README.md  k3d-cluster.yaml
k3s/manifests/: namespaces.yaml  storage-class.yaml
k3s/network-policy/: app-policy.yaml  cache-policy.yaml  database-policy.yaml  ingress-policy.yaml  monitoring-policy.yaml
migrations/: env.py
migrations/versions/: e523a7601dba_auto_migration.py
shell/: send_allure.sh
src/app/: run.py
(+130 files in other folders)
