[tool.poetry]
name = "webpanelnew"
version = "0.1.0"
description = ""
authors = ["Alastor <none@test.local>"]
readme = "README.md"
packages = [{include = "app", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = {extras = ["typing"], version = "^3.1.0"}
flask-wtf = "^1.2.2"
flask-session = "^0.8.0"
flask-sqlalchemy = "^3.1.1"
flask-migrate = "^4.1.0"
flask-smorest = "^0.45.0"
psycopg2-binary = "^2.9.10"
python-logging-loki = "^0.3.1"
dependency-injector = "^4.45.0"
pydantic-settings = "^2.7.1"
pyyaml = "^6.0.2"
toml = "^0.10.2"
redis = "^5.2.1"
marshmallow = "^3.25.1"
gunicorn = "^23.0.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.14.1"
flake8 = "^7.1.1"
black = "^24.10.0"
sphinx = "^8.1.3"
sphinx-rtd-theme = "^3.0.2"
types-pyyaml = "^6.0.12.20241230"
types-toml = "^0.10.8.20240310"
pre-commit = "^4.0.1"
pytest = "^8.3.4"
pytest-flask = "^1.3.0"
allure-pytest = "^2.13.5"
isort = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
